--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,3 +36,12 @@ services:
       - POSTGRES_DB=payments
     ports:
       - 5433:5432
+
+  tickets-db:
+    image: postgres:13.2-alpine
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=tickets
+    ports:
+      - 5434:5432
