--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,3 +45,12 @@ services:
       - POSTGRES_DB=tickets
     ports:
       - 5434:5432
+
+  users-db:
+    image: postgres:13.2-alpine
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=users
+    ports:
+      - 5435:5432
