added commands to run all microservices

--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/apps/backend/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/backend/test/jest-e2e.json"
+    "test:e2e": "jest --config ./apps/backend/test/jest-e2e.json",
+    "start:dev:auth": "npm run start:dev -- auth",
+    "start:dev:tickets": "npm run start:dev -- tickets",
+    "start:dev:flights": "npm run start:dev -- flights",
+    "start:dev:payments": "npm run start:dev -- payments",
+    "start:dev:all": "concurrently \"npm run start:dev:auth\" \"npm run start:dev:tickets\" \"npm run start:dev:flights\" \"npm run start:dev:payments\""
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
